styles/modules/layout/Layout.module.scss
@use "~abstracts" as *;

.layout {
  min-height: 100vh;
  .main {
    transition: all 0.5s ease;
    position: fixed;
    width: 100%;
    max-height: 100vh;
    overflow-y: auto;

    left: 0;
  }
  .side {
    display: flex;
    position: fixed;
    justify-content: flex-start;
    height: 100vh;
    z-index: 2;
    transition: all 0.5s ease;
  }
}

.open {
  --size: 80vw;
  @include tablet {
    --size: 30vw;
  }
  @include desktop {
    --size: 20vw;
  }
  .main {
    left: var(--size);
    top: 0;
  }
  .side {
  }
}

